# clawguard-shield

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  auth.py  clawguard.py  database.py  docker-compose.yml  mcp_audit.py  mcp_scanner.py  models.py  openapi.yaml  payments.py  pyproject.toml  rate_limiter.py  report_generator.py  requirements.txt  risk-score-widget.html
.github/: pull_request_template.md
.github/workflows/: ci.yml  security-scan.yml
assets/: badge-preview.html
blog/: mcp-security-audit.html
clawguard_shield/: __init__.py  cli.py  export_patterns.py  patterns.json  patterns.yaml
eval/: auto_improver.py  benchmark.py  dataset.json  last_improvement_prompt.txt  mcp-audit-report.md  owasp-agentic-coverage.md  owasp-coverage.md  report.html  report.py
landing/: dashboard.html  index.html
marketing/: launch-posts.md  ready-to-post.md
templates/blog/: eu-ai-act-mcp-compliance-report-2026.html  index.html  owasp-mcp-top-10-mapping.html
tests/: conftest.py  test_api.py  test_auth.py  test_payments.py  test_preprocessor.py  test_rate_limit.py  test_report.py
